@@ -1,10 +1,16 @@
 2006-02-03  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/widgets/list.py (List._setup_columns): If there are no
+	expanded columns add a fake one after the last one.
+
+2006-02-03  Patrick K O'Brien <pobrien@orbtech.com>
+
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/list.py: Use set_sort_column_id
 	better with column ids. Simplify _on_column__clicked.
 	When switching columns, always set to ascending sorting.
+	Fixes #2420
 
 2006-02-01  Johan Dahlin  <jdahlin@async.com.br>
 
